--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "~4.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
